[project]
name = "stompman"
description = "Python STOMP client with pleasant API"
authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["stomp", "artemis", "activemq", "messaging", "jms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/vrslev/stompman"

[tool.uv]
dev-dependencies = [
    "anyio~=4.4.0",
    "mypy~=1.10.0",
    "pytest-cov~=5.0.0",
    "pytest~=8.2.2",
    "ruff~=0.4.8",
    "uvloop~=0.19.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true

[tool.ruff]
target-version = "py311"
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "EM",
    "FBT",
    "TRY003",
    "D1",
    "D203",
    "D213",
    "G004",
    "FA",
    "ANN101",
    "ANN102",
    "COM812",
    "ISC001",
    "S101",
    "SLF001",
    "CPY001",
]

[tool.pytest.ini_options]
addopts = "--cov -s"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = ["if TYPE_CHECKING:"]
