[project]
name = "stompman"
description = "Python STOMP client with pleasant API"
authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["stomp", "artemis", "activemq", "messaging", "jms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/vrslev/stompman"

[dependency-groups]
dev = [
    "anyio==4.6.2.post1",
    "faker==30.8.1",
    "hypothesis==6.115.5",
    "mypy==1.13.0",
    "polyfactory==2.17.0",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.7.1",
    "uvloop==0.21.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"


[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true

[tool.ruff]
target-version = "py311"
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ASYNC109",
    "COM812",
    "CPY001",
    "D1",
    "D203",
    "D213",
    "DOC201",
    "DOC501",
    "ISC001",
    "PLC2801",
    "PLR0913",
]
extend-per-file-ignores = { "tests/*" = ["S101", "SLF001", "ARG", "PLR6301"] }

[tool.pytest.ini_options]
addopts = "--cov -s -vv"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = ["if TYPE_CHECKING:"]
