[project]
name = "stompman-workspace"
requires-python = ">=3.11"
version = "0"

[dependency-groups]
dev = [
    "anyio==4.8.0",
    "faker==35.0.0",
    "hypothesis==6.124.7",
    "mypy==1.14.1",
    "polyfactory==2.19.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.3",
    "uvloop==0.21.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
stompman = { workspace = true }


[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ASYNC109",
    "COM812",
    "CPY001",
    "D1",
    "D203",
    "D213",
    "DOC201",
    "DOC501",
    "ISC001",
    "PLC2801",
    "PLR0913",
]
extend-per-file-ignores = { "*/test_*/*" = ["S101", "SLF001", "ARG", "PLR6301"] }

[tool.pytest.ini_options]
addopts = "--cov -s -vv"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = ["if TYPE_CHECKING:"]
